--- a/index.html
+++ b/index.html
@@ -6,14 +6,28 @@
     <title>Bangladesh 2.0</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <nav>
-        <div>
-            <h3>Bangladesh 2.0</h3>
-            <input type="button" value="sign in">
+<body class="full-width">
+    <nav class="nav-bar">
+        <div class="nav-items">
+            <div class="nav-item">
+                <h3>Bangladesh 2.0</h3>
+            </div>
+            <div class="nav-item">
+                <input class="sign-btn" type="button" value="Sign In">
+            </div>
         </div>
-
     </nav>
+    <header class="banner">
+        <div class="header-content">
+            <h4>Bangladesh 2.0</h4>
+            <h2>Idea , innovation ,
+                vision and challenges in New Bangladesh.</h2>
+            <input class="primary-btn" type="button" value="Explore New Bangladesh">
+        </div>
+        <div class="header-img">
+            <img src="assets/hero.png" alt="Bangladesh">
+        </div>
+    </header>
     
 </body>
 </html>
