--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
             <img src="assets/hero.png" alt="Bangladesh">
         </div>
     </header>
+    <main>
+        <section class="pillars">
+            <h2>Pillars of "Bangladesh 2.0"</h2>
+            <div class="pillars-items">
+                <div class="pillar-item">
+                    <img src="./assets/card-icon.png" alt="Innovation">
+                    <h3>Innovation</h3>
+                    <p>Innovation is the systematic practice of developing and marketing breakthrough products and services for adoption by customers.</p>
+                </div>
+                <div class="pillar-item">
+                    <img src="./assets/card-icon.png" alt="Sustainability">
+                    <h3>Sustainability</h3>
+                    <p>Sustainability is the ability to meet the needs of the present without compromising the future. </p>
+                </div>
+                <div class="pillar-item">
+                    <img src="./assets/card-icon.png" alt="Infrastructure">
+                    <h3>Infrastructure</h3>
+                    <p>Infrastructure is the set of facilities and systems that serve a country, city, or other area.</p>
+                </div>
+                <div class="pillar-item">
+                    <img src="./assets/card-icon.png" alt="Empowerment">
+                    <h3>Empowerment</h3>
+                    <p>Empowerment is the degree of autonomy and self-determination in people and in communities.</p>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
