--- a/index.html
+++ b/index.html
@@ -54,6 +54,46 @@
                 </div>
             </div>
         </section>
+        <section class="card">
+            <div class="card-heading">
+                <h2>The Vision of Future</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            </div>
+            <div class="card-items">
+                <div class="card-item yellow">
+                    <img src="./assets/card-icon.png" alt="Digital Transformation">
+                    <h3>Digital Transformation</h3>
+                    <p>Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <div class="card-btn" >
+                        <input class="primary-btn btn-yellow" type="button" value="Learn More">
+                    </div>
+                </div>
+                <div class="card-item blue">
+                    <img src="./assets/card-icon.png" alt="Green Energy">
+                    <h3>Green Energy</h3>
+                    <p>Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <div class="card-btn">
+                        <input class="primary-btn btn-blue" type="button" value="Learn More">
+                    </div>
+                </div>
+                <div class="card-item green">
+                    <img src="./assets/card-icon.png" alt="Modern infrastructure">
+                    <h3>Modern Infrastructure</h3>
+                    <p>Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <div class="card-btn">
+                        <input class="primary-btn" type="button" value="Learn More">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="quote">
+            <div class="quote-content">
+                <p>I believe that we can create a poverty-free world because poverty is not created by poor people. It has been created and sustained by the economic and social systems that we have designed for ourselves; the institutions and concepts that make up that system; the policies that we pursue.”</p>
+                <h4>Dr. Muhammad Yunus</h4>
+                <p>Chief Adviser of the People's Republic of Bangladesh</p>
+            </div>
+        </section>
     </main>
     
 </body>
